# test_parallel_training

./: automl.py  main.py  pyproject.toml  test.ipynb  utils.py
